--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -3,14 +3,16 @@
     justify-content: space-around;
     align-items: center;
     color: black;
-    width: auto;
-    padding: 1em;
+    width: 96.1em;
+    padding: 0.5em;
     background-color: black;
     font-size: 1.2em;
     font-family: 'Abril Fatface', cursive;
     font-family: 'Anuphan', sans-serif;
     font-family: 'Fira Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
+    
+    
 
     .logoBruxelles {
         width: 95px;
