--- a/SCSS/themes/_theme.scss
+++ b/SCSS/themes/_theme.scss
@@ -1,9 +1,19 @@
 body {
     margin: 0%;
+    font-family: 'Abril Fatface', cursive;
+    font-family: 'Anuphan', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     a {
         text-decoration: none;
         color: white;
+        
+        
     }
+}
+
+a:hover {
+    color: yellow;
 }
 
 .liste {
