--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -11,8 +11,6 @@
     font-family: 'Anuphan', sans-serif;
     font-family: 'Fira Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
-    
-    
 
     .logoBruxelles {
         width: 95px;
@@ -21,4 +19,7 @@
         margin-right: 40px;
         
       }
+    .liste {
+        padding-right: 3em;
+    }
   }
