--- a/SCSS/themes/_theme.scss
+++ b/SCSS/themes/_theme.scss
@@ -4,6 +4,7 @@ body {
     font-family: 'Anuphan', sans-serif;
     font-family: 'Fira Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
+    padding-bottom: 5em;
     a {
         text-decoration: none;
         color: white;
