--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .bvnBruxelles {
   display: flex;
   justify-content: space-around;
@@ -18,6 +19,9 @@
   margin-left: 40px;
   margin-right: 40px;
 }
+.bvnBruxelles .liste {
+  padding-right: 3em;
+}
 
 body {
   margin: 0%;
@@ -25,6 +29,7 @@ body {
   font-family: "Anuphan", sans-serif;
   font-family: "Fira Sans", sans-serif;
   font-family: "Montserrat", sans-serif;
+  padding-bottom: 5em;
 }
 body a {
   text-decoration: none;
@@ -45,6 +50,22 @@ a:hover {
   width: 116.5em;
   height: 30em;
   position: relative;
+  transition: filter 0.3s ease-in-out;
+}
+.panorama .grandeRoue:hover {
+  filter: brightness(115%);
+}
+.panorama .bvn {
+  z-index: 1;
+  position: absolute;
+  text-align: center;
+  margin: 0 auto;
+  left: 8px;
+  right: 0;
+  top: 26%;
+  color: rgb(0, 0, 0);
+  width: 70%;
+  text-shadow: -1px -1px 0 rgb(255, 255, 255);
 }
 
 .decouvrezBruxelles {
@@ -62,6 +83,10 @@ a:hover {
 .accueilPresentation .accueilImages {
   width: 38em;
   height: 20em;
+  transition: filter 0.3s ease-in-out;
+}
+.accueilPresentation .accueilImages:hover {
+  filter: brightness(115%);
 }
 .accueilPresentation .accueilTextes {
   padding-left: 1em;
@@ -74,8 +99,32 @@ a:hover {
   width: 36em;
 }
 
-label {
-  display: block;
+/* page événements */
+.eventBx {
+  margin-left: 20em;
+  width: 60%;
+  text-align: justify;
+  margin-right: 20em;
+  justify-content: center;
+}
+
+.marcheBx {
+  width: 60%;
+  height: 60%;
+  margin-left: 20em;
+  margin-right: 20em;
+  justify-content: center;
+  transition: transform 0.3s;
+}
+
+.marcheBx:hover {
+  transform: scale(1.2);
+}
+
+.marchesBrx {
+  width: 100%;
+  height: 60%;
+  margin-right: 20em;
 }
 
 .search-bar {
@@ -131,4 +180,65 @@ label {
 
 #myBtn:hover {
   background-color: #777;
+}
+
+.formNous {
+  margin-left: 30%;
+  font-size: 20px;
+  line-height: 25px;
+  width: 900px;
+  text-align: justify;
+}
+
+.formulaire {
+  margin: 0%;
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+  margin-left: 30%;
+  margin-right: 30%;
+  border: solid black 2px;
+  padding: 50px;
+  background-color: rgba(234, 234, 234, 0.887);
+}
+.formulaire .logoBruxelles {
+  width: 150px;
+  height: 75px;
+}
+
+.envoyer {
+  width: 10em;
+  background-color: yellow;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin-left: 40%;
+}
+
+.ameliorations {
+  width: 84.5%;
+  text-align: justify;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+.contactDirect {
+  display: flex;
+  flex-direction: column;
+  line-height: 50px;
+  padding: 2em;
+  width: 75%;
+  border: solid black 2px;
+  border-radius: 5%;
+  background-color: rgba(234, 234, 234, 0.887);
+}
+.contactDirect a {
+  text-decoration: none;
+  color: black;
+}
+.contactDirect a:hover {
+  color: rgba(255, 0, 0, 0.467);
+}
+
+.contactTel {
+  width: 84.5%;
 }/*# sourceMappingURL=style.css.map */
