--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,4 +1,6 @@
 @import 'layout/header';
 @import 'themes/theme';
 @import 'pages/home';
-@import 'components/buttons'
+@import 'components/buttons';
+@import 'layout/form';
+@import 'pages/contact';
