--- a/SCSS/pages/_contact.scss
+++ b/SCSS/pages/_contact.scss
@@ -27,7 +27,7 @@
 
 .envoyer {
     width: 10em;
-    background-color:yellow;
+    background-color:white;
     padding-top: 1em;
     padding-bottom: 1em;
     margin-left: 40%;
