--- a/SCSS/pages/_home.scss
+++ b/SCSS/pages/_home.scss
@@ -5,6 +5,7 @@
         height: 30em;
         position: relative;
         transition: filter 0.3s ease-in-out;
+
     }   
     .grandeRoue:hover {
         filter: brightness(115%);
@@ -36,14 +37,16 @@
     margin-left: 20em;
     margin-right: 20em;
     .accueilImages {
-        
         width: 38em;
         height: 20em;
         transition: filter 0.3s ease-in-out;
+
     }
 
     .accueilImages:hover {
         filter: brightness(115%);
+        transform: scale(1.2);
+        transition: transform 0.3s;
     }
 
 
@@ -64,29 +67,42 @@
 
 .eventBx {
     margin-left: 20em;
-    width: 60%;
+    width: 65%;
     text-align: justify;
-    margin-right: 20em;
     justify-content: center;
     
 }
 
-.marcheBx {
-    width: 60%;
-    height: 60%;
+.eventMarcheBx {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    .marcheBx {
+        width: 38%;
+        transition: transform 0.3s;
+}
+
+    .marcheBx:hover {
+        transform: scale(2);
+}
+
+    .marchesBrx {
+        width: 48%;
+        height: 55%;
+        
+}
+
+}
+
+.descriptionEvent {
+    width: 90%;
+    line-height: 25px;
+}
+
+.mapBruxelles {
     margin-left: 20em;
-    margin-right: 20em;
-    justify-content: center;
-    transition: transform 0.3s;
-}
-
-.marcheBx:hover {
-    transform: scale(1.2);
-}
-
-.marchesBrx {
-    width: 100%;
-    height: 60%;
-    
-    margin-right: 20em;
+    .maps{
+        margin-right: 20px;
+        
+    }
 }
