--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -1,11 +1,11 @@
-.bvnBruxelles {
+.bivnBruxelles {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    color: black;
+    color: aqua;
     width: 95.45em;
     padding: 0.5em;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     font-size: 1.2em;
     font-family: 'Abril Fatface', cursive;
     font-family: 'Anuphan', sans-serif;
