--- a/SCSS/azor.scss
+++ b/SCSS/azor.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1024px){
+/*@media screen and (min-width: 1024px){
 
 }
 
@@ -99,7 +99,7 @@ body {
 }
 
 .slider a {
-    /* Set the link styles */
+   
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,13 +108,13 @@ body {
     color: #000;
   }
   .slider span {
-    /* Set the styles for the text */
+   
     margin-top: 10px;
   }
 
 
   
-  
+  /*
 .sliderag {
     display: flex;
     aspect-ratio: 16 / 9;
@@ -287,4 +287,63 @@ a:active  {
 .strg {
     text-decoration: underline;
     font-weight: bold;
+}*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #000;
+}
+
+.gallery{
+    position: relative;
+    width: 300px;
+    height: 200px;
+    transform-style: preserve-3d;
+    animation: animate 30s linear  infinite;
+    animation-play-state: running;
+}
+
+@keyframes animate {
+    0%{
+        transform:  rotateY(0deg);
+    }
+    100%{
+        transform: perspective(1000px) rotateY(360deg);
+    }
+}
+
+.gallery:hover{
+    animation-play-state: paused;
+}
+
+span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+    -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004);
+}
+
+span img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
