--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -1,25 +1,24 @@
-.bvnBruxelles {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: black;
-    width: 95.45em;
-    padding: 0.5em;
-    background-color: black;
-    font-size: 1.2em;
-    font-family: 'Abril Fatface', cursive;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Fira Sans', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-
-    .logoBruxelles {
-        width: 95px;
-        height: 55px;
-        margin-left: 40px;
-        margin-right: 40px;
-        
-      }
-    .liste {
-        padding-right: 3em;
-    }
-  }
+.bivnBruxelles {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: aqua;
+  width: 95.45em;
+  padding: 0.5em;
+  background-color: rgb(0, 0, 0);
+  font-size: 1.2em;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Anuphan", sans-serif;
+  font-family: "Fira Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+.bivnBruxelles .logoBruxelles {
+  width: 95px;
+  height: 55px;
+  margin-left: 35px;
+  margin-right: 40px;
+}
+.bivnBruxelles .liste {
+  padding-right: 3em;
+  margin-right: 6%;
+}
