--- a/SCSS/azor.css
+++ b/SCSS/azor.css
@@ -1,352 +1,267 @@
-<<<<<<< HEAD
-/*@media screen and (min-width: 1024px){
-
-}
-
-@media screen and (max-width: 768px) {
-
-}
 body {
   margin: 0;
 }
+
 .bvnBruxelles {
-    color: white;
+  color: white;
 }
-    .logoBruxelles {
-        width: 30%;
-        height: 30%;
 
-    }
-
-
-
+.logoBruxelles {
+  width: 30%;
+  height: 30%;
+}
 
 .container {
-    padding: 2rem;
-
+  padding: 2rem;
 }
+
 .kfda {
-    position: relative;
-    border: #e2e2e0 1px solid;
-    background-color: #e2e2e0;
-    margin-left: 26%;
-    padding: 0.6%;
-    width: 10%;
-    border-bottom-right-radius: 30px;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    margin-top: -29%;
-    width: 15%;
-    }
-
-
-
-
+  position: relative;
+  border: #e2e2e0 1px solid;
+  background-color: #e2e2e0;
+  margin-left: 26%;
+  padding: 0.6%;
+  width: 10%;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  margin-top: -29%;
+  width: 15%;
+}
 
 .slider-wrapper {
-    position: relative;
-
-
+  position: relative;
 }
+
 .slider {
-    display: flex;
-    aspect-ratio: 16 / 9;
-    overflow: hidden;
-    scroll-snap-type: x mandatory;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-    border-radius: 1rem;
-    height: 55vh;
-    width: 55vh;
-    margin-left: 20%;
-    margin-top: 10%;
-
-
+  display: flex;
+  aspect-ratio: 16/9;
+  overflow: hidden;
+  scroll-snap-type: x mandatory;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+  border-radius: 1rem;
+  height: 55vh;
+  width: 55vh;
+  margin-left: 20%;
+  margin-top: 10%;
 }
 
 .slider img {
-
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    object-fit: cover;
-    transform: scale(1);
-
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(1);
 }
 
 .slider-nav {
-    display: flex;
-    column-gap: 1rem;
-    position: absolute;
-    left: 35%;
-    bottom: -25%;
-    transform: translateX(-50%);
-    z-index: 1;
+  display: flex;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  position: absolute;
+  left: 35%;
+  bottom: -25%;
+  transform: translateX(-50%);
+  z-index: 1;
 }
+
 .slider-nav a {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background-color: grey;
-    opacity: 0.75;
-    transition: opacity ease 250ms;
-
-
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: grey;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
 }
+
 .slider-nav a:hover {
-    opacity: 1;
+  opacity: 1;
 }
+
 #slider-3 img {
-    width: 10px;
+  width: 10px;
 }
 
 .slider a {
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: #000;
-  }
-  .slider span {
-
-    margin-top: 10px;
-  }
-
-
-
-  /*
-.sliderag {
-    display: flex;
-    aspect-ratio: 16 / 9;
-    overflow: hidden;
-    scroll-snap-type: x mandatory;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-    border-radius: 1rem;
-    height: 55vh;
-    width: 55vh;
-    margin-left: 50%;
-    margin-top: -2.8%;
-
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: #000;
 }
+
+.slider span {
+  margin-top: 10px;
+}
+
+.sliderag {
+  display: flex;
+  aspect-ratio: 16/9;
+  overflow: hidden;
+  scroll-snap-type: x mandatory;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+  border-radius: 1rem;
+  height: 55vh;
+  width: 55vh;
+  margin-left: 50%;
+  margin-top: -2.8%;
+}
+
 .sliderag img {
-
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    object-fit: cover;
-    transform: scale(1);
-
-
-
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(1);
 }
 
 .slider-navag {
-    display: flex;
-    column-gap: 1rem;
-    position: absolute;
-    left: 63%;
-    bottom: -25%;
-    transform: translateX(-50%);
-    z-index: 1;
+  display: flex;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  position: absolute;
+  left: 63%;
+  bottom: -25%;
+  transform: translateX(-50%);
+  z-index: 1;
 }
+
 .slider-navag a {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background-color: grey;
-    opacity: 0.75;
-    transition: opacity ease 250ms;
-
-
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: grey;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
 }
+
 .slider-navag a:hover {
-    opacity: 1;
-}
-.agenda {
-position: relative;
-border: #e2e2e0 1px solid;
-background-color: #e2e2e0;
-margin-left: 56%;
-padding: 0.6%;
-width: 10%;
-border-bottom-right-radius: 30px;
-border-top-right-radius: 30px;
-border-top-left-radius: 10px;
-border-bottom-left-radius: 10px;
-margin-top: -29%;
-width: 15%;
+  opacity: 1;
 }
 
-.vac1{
-    overflow: hidden;
+.agenda {
+  position: relative;
+  border: #e2e2e0 1px solid;
+  background-color: #e2e2e0;
+  margin-left: 56%;
+  padding: 0.6%;
+  width: 10%;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  margin-top: -29%;
+  width: 15%;
 }
+
+.vac1 {
+  overflow: hidden;
+}
+
 .fa-twitter {
-    font-size: 30px;
-    color: black;
-    margin-left: 43%;
+  font-size: 30px;
+  color: black;
+  margin-left: 43%;
 }
+
 .fa-facebook-f, .fa-instagram, .fa-youtube, .fa-tiktok, .fa-spotify {
-    font-size: 30px;
-    color: black;
-    padding: 10px;
+  font-size: 30px;
+  color: black;
+  padding: 10px;
 }
-footer{
-    border: 1px grey solid;
-    height: 50%;
-    margin-top: 50%;
-    background-color: grey;
-    overflow: hidden;
-    color: white;
+
+footer {
+  border: 1px grey solid;
+  height: 50%;
+  margin-top: 50%;
+  background-color: grey;
+  overflow: hidden;
+  color: white;
 }
 
 .animalsfriends, .patrimoine {
-    filter: brightness(0%);
-    width: 70px;  
-
+  filter: brightness(0%);
+  width: 70px;
 }
-
-
 
 .animalsfriends {
-    margin-left: 80%;
+  margin-left: 80%;
 }
+
 .citybxl {
-    width: 150px;
-    margin-left: 72.4%;
-
-
-
+  width: 150px;
+  margin-left: 72.4%;
 }
-.unesco {
-  width:110px;
 
- margin-left: 5%;
-  }
+.unesco {
+  width: 110px;
+  margin-left: 5%;
+}
 
 .patrimoine {
-    margin-left:6%;
-    margin-top:-5%;
-    padding-top: 1%;
+  margin-left: 6%;
+  margin-top: -5%;
+  padding-top: 1%;
 }
+
 .brucity {
-    text-align: center;
+  text-align: center;
 }
 
 ul {
-    border:1px black solid;
-    box-shadow:-1px -1px 13px hsla(0, 0%, 9%, 0.25);
-    width:54%;
-    height: 35px;
-    border-bottom-right-radius: 30px;
-    border-top-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    border-top-left-radius: 30px;
-    text-decoration: underline;
-    text-transform: uppercase;
-    list-style-type: none;
-    color: black;
-    margin-left: 22%;
-    margin-top: -7%;
-    padding-top: 0.6%;
-    overflow: hidden;
-
-
-
+  border: 1px black solid;
+  box-shadow: -1px -1px 13px hsla(0, 0%, 9%, 0.25);
+  width: 54%;
+  height: 35px;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  list-style-type: none;
+  color: black;
+  margin-left: 22%;
+  margin-top: -7%;
+  padding-top: 0.6%;
+  overflow: hidden;
 }
+
 li {
   display: inline;
   margin-right: 25px;
   color: black;
-
-
-
 }
+
 a:link {
-    color:black;
-}
-a:visited {
-    color: black;
-}
-a:hover{
-    color: black;
-}
-a:active  {
-    color: white;
+  color: black;
 }
 
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: black;
+}
+
+a:active {
+  color: white;
+}
 
 .fa-brands:hover {
-    background-color: white;
-    opacity: 0.2;
+  background-color: white;
+  opacity: 0.2;
 }
+
 .obcn {
-    margin-left: 45%;
-    margin-top: 5%;
-
+  margin-left: 45%;
+  margin-top: 5%;
 }
+
 .strg {
-    text-decoration: underline;
-    font-weight: bold;
-}*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #000;
-}
-
-.gallery {
-  position: relative;
-  width: 300px;
-  height: 200px;
-  transform-style: preserve-3d;
-  animation: animate 30s linear infinite;
-  animation-play-state: running;
-}
-
-@keyframes animate {
-  0% {
-    transform: rotateY(0deg);
-  }
-  100% {
-    transform: perspective(1000px) rotateY(360deg);
-  }
-}
-.gallery:hover {
-  animation-play-state: paused;
-}
-
-span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform-origin: center;
-  transform-style: preserve-3d;
-  transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
-  -webkit-box-reflect: below 0px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.2666666667));
-}
-
-span img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  cursor: pointer;
+  text-decoration: underline;
+  font-weight: bold;
 }/*# sourceMappingURL=azor.css.map */
-=======
-/*# sourceMappingURL=azor.css.map */
->>>>>>> 7fae5d283d1a60ecee540e82fd434b4f5bcb857f
