--- a/SCSS/azor.scss
+++ b/SCSS/azor.scss
@@ -1,4 +1,4 @@
-/*@media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px){
 
 }
 
@@ -99,7 +99,7 @@ body {
 }
 
 .slider a {
-    /* Set the link styles */
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,7 +108,7 @@ body {
     color: #000;
   }
   .slider span {
-    /* Set the styles for the text */
+    
     margin-top: 10px;
   }
 
@@ -288,3 +288,5 @@ a:active  {
     text-decoration: underline;
     font-weight: bold;
 }
+
+    
