--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+
+
+
 /*-------------HEADER------------*/
 .bivnBruxelles {
   display: flex;
@@ -35,6 +38,7 @@ body {
   overflow-x: hidden;
   
 }
+
 body a {
   text-decoration: none;
   color: white;
@@ -330,14 +334,16 @@ button {
 /*---------------SLIDER ACTU ET AGENDA------------------*/
 .titleactu {
   margin-left: 21.1%;
+
 }
 .gallery{
   position: relative;
   width: 500px;
   height: 400px;
   transform-style: preserve-3d;
-  animation: animate 50s linear infinite ;
+  animation: animate 10s linear infinite ;
   animation-play-state: running;
+  
   
 }
 
@@ -354,8 +360,10 @@ button {
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
     min-height: 60vh;
-    margin-left: 13em; 
+    margin-left: 45%; 
+    margin-right: 50%;
 }
 .gallery:hover{
   animation-play-state:paused;
@@ -486,3 +494,18 @@ footer {
 }
 
 /*# sourceMappingURL=style.css.map */
+/*@media screen and (max-width:900px) {
+  .bivnBruxelles {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: aqua;
+  width: 70em;
+  padding: 0.5em;
+  background-color: rgb(0, 0, 0);
+  font-size: 1.2em;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Anuphan", sans-serif;
+  font-family: "Fira Sans", sans-serif;
+  font-family: "Montserrat", sans-serif; }
+}*/
