--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -32,6 +32,8 @@ body {
   font-family: "Anuphan", sans-serif;
   font-family: "Fira Sans", sans-serif;
   font-family: "Montserrat", sans-serif;
+  background-color: white;
+  color: black;
 }
 body a {
   text-decoration: none;
