--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
   color: aqua;
-  width: 95.45em;
+  width: 100%;
   padding: 0.5em;
   background-color: rgb(0, 0, 0);
   font-size: 1.2em;
@@ -22,8 +22,7 @@
 }
 
 .bivnBruxelles .liste {
-  padding-right: 3em;
-  margin-right: 6%;
+  margin-right: -8%;
 }
 
 body {
@@ -33,6 +32,35 @@ body {
   font-family: "Fira Sans", sans-serif;
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+}
+
+#dark {
+  height: 35px;
+  margin-top: -0.5%;
+  padding-top: 0.5%;
+  font-size: 0.9em;
+}
+
+body.dark-mode {
+  background-color: #1a1a1a;
+  color: #ffffff;
+}
+body.dark-mode a {
+  color: white;
+}
+body.dark-mode .accueilPresentation {
+  color: black;
+}
+body.dark-mode #myBtn {
+  background-color: white;
+  color: black;
+}
+body.dark-mode #dark {
+  background-color: white;
+  color: black;
+}
+body.dark-mode span img {
+  border: 7px solid white;
 }
 
 body a {
@@ -51,7 +79,7 @@ a:hover {
 }
 
 .panorama .grandeRoue {
-  width: 115.75em;
+  width: 100%;
   height: 30em;
   position: relative;
   transition: filter 0.3s ease-in-out;
@@ -351,7 +379,7 @@ button {
   width: 500px;
   height: 400px;
   transform-style: preserve-3d;
-  animation: animate 10s linear infinite;
+  animation: animate 30s linear infinite;
   animation-play-state: running;
 }
 
@@ -383,20 +411,20 @@ span, .actu, .agenda {
   width: 200px;
   height: 200px;
   transform-style: preserve-3d;
-  transform: rotateY(calc(var(--i) * 80deg)) translateZ(400px);
-  -webkit-box-reflect: below 0px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.2666666667));
+  transform: rotateY(calc(var(--i) * 80deg)) translateZ(500px);
 }
 
 span img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 300px;
+  width: 400px;
   height: 300px;
   border-radius: 10px;
   -o-object-fit: cover;
      object-fit: cover;
   cursor: pointer;
+  border: 7px solid black;
 }
 
 .lienactu, .lienage {
@@ -430,7 +458,7 @@ span img {
 footer {
   border: 1px grey solid;
   height: 50%;
-  margin-top: 50%;
+  margin-top: 15%;
   background-color: grey;
   overflow: hidden;
   color: white;
