--- a/SCSS/themes/_theme.scss
+++ b/SCSS/themes/_theme.scss
@@ -4,6 +4,8 @@ body {
     font-family: 'Anuphan', sans-serif;
     font-family: 'Fira Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
+    background-color: white;
+    color: black;
     a {
         text-decoration: none;
         color: white;
